# streaming-audio-transcriber

./: .gitignore  LICENSE  README.md  pyproject.toml
src/streaming_audio_transcriber/: __init__.py  cli.py
